# async-ia

./: CLAUDE.md  README.md  pyproject.toml
src/: main.py
src/core/: __init__.py  config.py  dependencies.py
src/models/: __init__.py  schemas.py
src/routes/: __init__.py  process.py
src/services/: __init__.py  ai_service.py  file_processor.py
